# cobra

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  COBRA_EXPERIMENTS.md  Dockerfile  OSTRICH_EXPERIMENTS.md  README.md  run-debug.sh  run.sh
Example/cobra-files/: cobra_opt.txt  patchtree_2.kct_osp_additions  patchtree_2.kct_osp_deletions  patchtree_2.kct_spo_deletions  patchtree_4.kct_osp_additions  patchtree_4.kct_pos_deletions  patchtree_4.kct_spo_deletions  snapshot_3.hdt  snapshot_3.hdt.index  snapshotpatch_3.dic
Example/n-triple-files/0/: main.nt.snapshot.txt
Example/n-triple-files/1/: main.nt.deletions.txt
Example/n-triple-files/2/: main.nt.additions.txt  main.nt.deletions.txt
Example/n-triple-files/3/: main.nt.additions.txt  main.nt.deletions.txt  main.nt.snapshot.txt
Example/n-triple-files/4/: main.nt.snapshot.txt
Example/n-triple-files/5/: main.nt.deletions.txt  main.nt.snapshot.txt
Example/n-triple-files/6/: main.nt.additions.txt  main.nt.deletions.txt  main.nt.snapshot.txt
Experiments/: README.md
Experiments/HDT/: README.md  get-output.sh
Experiments/HDT/Results/output/time/beara/: time-hdt-cb-diff-o-queries-highCardinality.txt.txt  time-hdt-cb-diff-o-queries-lowCardinality.txt.txt  time-hdt-cb-diff-p-queries-highCardinality.txt.txt  time-hdt-cb-diff-p-queries-lowCardinality.txt.txt  time-hdt-cb-diff-po-queries-highCardinality.txt.txt  time-hdt-cb-diff-po-queries-lowCardinality.txt.txt  time-hdt-cb-diff-s-queries-highCardinality.txt.txt  time-hdt-cb-diff-s-queries-lowCardinality.txt.txt  time-hdt-cb-diff-so-queries-lowCardinality.txt.txt  time-hdt-cb-diff-sp-queries-highCardinality.txt.txt  time-hdt-cb-diff-sp-queries-lowCardinality.txt.txt  time-hdt-cb-diff-spo-queries.txt.txt  time-hdt-cb-mat-o-queries-highCardinality.txt.txt  time-hdt-cb-mat-o-queries-lowCardinality.txt.txt  time-hdt-cb-mat-p-queries-highCardinality.txt.txt  time-hdt-cb-mat-p-queries-lowCardinality.txt.txt  time-hdt-cb-mat-po-queries-highCardinality.txt.txt  time-hdt-cb-mat-po-queries-lowCardinality.txt.txt  time-hdt-cb-mat-s-queries-highCardinality.txt.txt  time-hdt-cb-mat-s-queries-lowCardinality.txt.txt  time-hdt-cb-mat-so-queries-lowCardinality.txt.txt  time-hdt-cb-mat-sp-queries-highCardinality.txt.txt  time-hdt-cb-mat-sp-queries-lowCardinality.txt.txt  time-hdt-cb-mat-spo-queries.txt.txt  time-hdt-cb-ver-o-queries-highCardinality.txt.txt  time-hdt-cb-ver-o-queries-lowCardinality.txt.txt  time-hdt-cb-ver-p-queries-highCardinality.txt.txt  time-hdt-cb-ver-p-queries-lowCardinality.txt.txt  time-hdt-cb-ver-po-queries-highCardinality.txt.txt  time-hdt-cb-ver-po-queries-lowCardinality.txt.txt  time-hdt-cb-ver-s-queries-highCardinality.txt.txt  time-hdt-cb-ver-s-queries-lowCardinality.txt.txt  time-hdt-cb-ver-so-queries-lowCardinality.txt.txt  time-hdt-cb-ver-sp-queries-highCardinality.txt.txt  time-hdt-cb-ver-sp-queries-lowCardinality.txt.txt  time-hdt-cb-ver-spo-queries.txt.txt  time-hdt-ic-diff-o-queries-highCardinality.txt.txt  time-hdt-ic-diff-o-queries-lowCardinality.txt.txt  time-hdt-ic-diff-p-queries-highCardinality.txt.txt  time-hdt-ic-diff-p-queries-lowCardinality.txt.txt  (+32 more)
Experiments/OSTRICH/src/test/cpp/: bear.cc
Experiments/Results/BEARA/: calc_average.py  calc_average_mean_line.py  calc_query_performance.py  make_figures_bear_a.sh
Experiments/Results/BEARA/cobra_opt/: high-p-query.txt  high-po-query.txt  high-s-query.txt  high-sp-query.txt  low-so-query.txt  low-sp-query.txt  spo-query.txt
Experiments/Results/BEARA/fixup/: fix_up_ostrich_opt.txt
Experiments/Results/BEARA/ostrich/: high-o-query.txt  high-p-query.txt  high-sp-query.txt  low-o-query.txt  low-p-query.txt  low-s-query.txt  low-sp-query.txt  spo-query.txt
Experiments/Results/BEARA/ostrich_opt/: ostrich_opt.txt
Experiments/Results/BEARBd/: calc_average.py  calc_average_mean_line.py  calc_query_performance.py  make_figures_bear_b_daily.sh  process_ingestion.py
Experiments/Results/BEARBd/cobra_opt/: p-query.txt
Experiments/Results/BEARBd/ostrich/: ostrich.txt
Experiments/Results/BEARBd/ostrich_opt/: ostrich_opt.txt
Experiments/Results/BEARBh/: calc_query_performance.py  process_ingestion.py
Experiments/Results/BEARBh/fixup/: pre_fix_up_ostrich_opt.txt
Experiments/cobra/: README.md  get-output.sh  run-docker.sh
Experiments/jena/: README.md  get-output.sh
Experiments/ostrich/: README.md  get-output.sh  run-docker.sh
Experiments/ostrich/Results/output/bearb-day/: ingest-output.txt  p.txt.txt  po.txt.txt
ExperimentsOld/OSTRICH/: README.md
ExperimentsOld/Results/BEARA/: process_ingestion.py
ExperimentsOld/Results/BEARA/cobra_opt/: cobra_opt.txt  high-o-query.txt  low-o-query.txt  low-p-query.txt  low-po-query.txt  low-s-query.txt
ExperimentsOld/Results/BEARA/fixup/: pre_fix_up_ostrich_opt.txt
ExperimentsOld/Results/BEARA/ostrich/: high-po-query.txt  high-s-query.txt  low-po-query.txt  low-so-query.txt  ostrich.txt
ExperimentsOld/Results/BEARBd/cobra_opt/: cobra_opt.txt  po-query.txt
ExperimentsOld/Results/BEARBd/fixup/: fix_up_ostrich_opt.txt
ExperimentsOld/Results/BEARBd/ostrich/: p-query.txt  po-query.txt
ExperimentsOld/Results/BEARBh/: calc_average.py  make_figures_bear_b_hourly.sh  make_mean_line_plot.py
src/main/cpp/: copy.cc  insert.cc  query_delta_materialized.cc  query_version.cc  query_version_materialized.cc  reverse.cc
src/main/cpp/controller/: controller.cc  controller.h  patch_builder.cc  patch_builder_streaming.cc  triple_delta_iterator.cc  triple_delta_iterator.h  triple_versions_iterator.cc  triple_versions_iterator.h
src/main/cpp/evaluate/: Experimenter.cc  Experimenter.h
src/main/cpp/patch/: patch_element_iterator.cc  patch_tree.cc  patch_tree.h  patch_tree_addition_value.cc  patch_tree_addition_value.h  patch_tree_deletion_value.cc  patch_tree_deletion_value.h  patch_tree_iterator.cc  patch_tree_iterator.h  patch_tree_manager.cc  patch_tree_manager.h  triple.cc  triple.h  triple_store.cc  triple_store.h
src/main/cpp/snapshot/: snapshot_manager.cc  snapshot_manager.h
src/test/cpp/: bear.cc
utils/: join-xyzt.sh  split-in-lines.sh
(+261 files in other folders)
